force-app/main/default/objects/Job_Application__c/fields/Applied_From__c.field-meta.xml
<CustomField>
    <fullName>Applied_From__c</fullName>
    <label>Applied_From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
            <value>
                <fullName>Admin Console</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>