force-app/main/default/objects/Job_Application__c/fields/Auto_Routed__c.field-meta.xml
<CustomField>
    <fullName>Auto_Routed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto_Routed</label>
    <type>Checkbox</type>
</CustomField>