force-app/main/default/objects/Job_Application__c/fields/Clinical_Assessments_Passed__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Assessments_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical Assessments Passed</label>
    <type>Checkbox</type>
</CustomField>