force-app/main/default/objects/Job_Application__c/fields/Eligibility_Cons__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Cons__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility_Cons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>