force-app/main/default/objects/Job_Application__c/fields/Eligibility_Pros__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Pros__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility_Pros</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>