force-app/main/default/objects/Job_Application__c/fields/Eligibility_Score__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Score__c</fullName>
    <label>Eligibility_Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>