force-app/main/default/objects/Job_Application__c/fields/Eligibility_Summary__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility_Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>