force-app/main/default/objects/Job_Application__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>NOT(
OR(
ISPICKVAL(Status__c, &quot;Rejected&quot;),
ISPICKVAL(Status__c, &quot;Withdrawn&quot;),
ISPICKVAL(Status__c, &quot;Hired&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Active</label>
    <type>Checkbox</type>
</CustomField>