force-app/main/default/objects/Job_Application__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job_Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>