force-app/main/default/objects/Job_Application__c/fields/Screening_Result__c.field-meta.xml
<CustomField>
    <fullName>Screening_Result__c</fullName>
    <label>Screening_Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>