force-app/main/default/objects/Job_Application__c/fields/Screening_Score__c.field-meta.xml
<CustomField>
    <fullName>Screening_Score__c</fullName>
    <label>Screening_Score</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>