force-app/main/default/objects/Job_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Received</fullName>
            </value>
            <value>
                <fullName>Eligibility Check In Progress</fullName>
            </value>
            <value>
                <fullName>Eligibility Failed</fullName>
            </value>
            <value>
                <fullName>Eligibility Passed</fullName>
            </value>
            <value>
                <fullName>License Verification Pending</fullName>
            </value>
            <value>
                <fullName>License Verified</fullName>
            </value>
            <value>
                <fullName>License Issue / Expired</fullName>
            </value>
            <value>
                <fullName>Clinical Assessment Scheduled</fullName>
            </value>
            <value>
                <fullName>Clinical Assessment Failed</fullName>
            </value>
            <value>
                <fullName>Clinical Assessment Passed</fullName>
            </value>
            <value>
                <fullName>Interview Scheduled</fullName>
            </value>
            <value>
                <fullName>Interview Rejected</fullName>
            </value>
            <value>
                <fullName>Interview Cleared</fullName>
            </value>
            <value>
                <fullName>Background Check In Progress</fullName>
            </value>
            <value>
                <fullName>Background Check Failed</fullName>
            </value>
            <value>
                <fullName>Background Check Cleared</fullName>
            </value>
            <value>
                <fullName>Drug Screening Pending (if applicable)</fullName>
            </value>
            <value>
                <fullName>Offer Released</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Offer Declined</fullName>
            </value>
            <value>
                <fullName>Credentialing In Progress</fullName>
            </value>
            <value>
                <fullName>Privileges Approved</fullName>
            </value>
            <value>
                <fullName>Privileges Limited</fullName>
            </value>
            <value>
                <fullName>Medical Onboarding In Progress</fullName>
            </value>
            <value>
                <fullName>Mandatory Training Pending</fullName>
            </value>
            <value>
                <fullName>Onboarding Completed</fullName>
            </value>
            <value>
                <fullName>Active – Allowed to Practice</fullName>
            </value>
            <value>
                <fullName>Active – Restricted Scope</fullName>
            </value>
            <value>
                <fullName>On Hold (Compliance Issue)</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>